// Vitest Snapshot v1

exports[`Run config swc-helpers > cjs structure 1`] = `
{
  "files": [
    {
      "name": "cjs.js",
    },
    {
      "name": "entry-mts.d.ts",
    },
    {
      "name": "entry-mts.js",
    },
  ],
  "name": "cjs",
}
`;

exports[`Run config swc-helpers > dist structure 1`] = `
{
  "files": [
    {
      "name": "entry-mts.cjs.es5.production.js",
    },
    {
      "name": "entry-mts.esm.es5.production.js",
    },
    {
      "name": "entry-mts.umd.es5.production.js",
    },
  ],
  "name": "dist",
}
`;

exports[`Run config swc-helpers > es2017 structure 1`] = `null`;

exports[`Run config swc-helpers > esm structure 1`] = `
{
  "files": [
    {
      "name": "cjs.js",
    },
    {
      "name": "entry-mts.d.ts",
    },
    {
      "name": "entry-mts.js",
    },
  ],
  "name": "esm",
}
`;

exports[`Run config swc-helpers > file content cjs/cjs.js 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
    value: true
});
var _object_spread = require(\\"@swc/helpers/_/_object_spread\\");
module.exports.add = function(a, b) {
    return a + b;
};
module.exports.extend = function(a, b) {
    return _object_spread._({}, a, b);
};
"
`;

exports[`Run config swc-helpers > file content cjs/entry-mts.d.ts 1`] = `
"import { add, extend } from './cjs';
export { add, extend };
export declare const foo: Record<string, any>;
"
`;

exports[`Run config swc-helpers > file content cjs/entry-mts.js 1`] = `
"\\"use strict\\";
Object.defineProperty(exports, \\"__esModule\\", {
    value: true
});
function _export(target, all) {
    for(var name in all)Object.defineProperty(target, name, {
        enumerable: true,
        get: all[name]
    });
}
_export(exports, {
    add: function() {
        return _cjs.add;
    },
    extend: function() {
        return _cjs.extend;
    },
    foo: function() {
        return foo;
    }
});
var _object_spread = require(\\"@swc/helpers/_/_object_spread\\");
var _cjs = require(\\"./cjs\\");
var foo = _object_spread._({}, (0, _cjs.extend)({
    a: 1
}, {
    b: 2
}));
"
`;

exports[`Run config swc-helpers > file content dist/entry-mts.cjs.es5.production.js 1`] = `
"\\"use strict\\";var e,r=require(\\"@swc/helpers/_/_object_spread\\"),t={},n=function(){if(e)return t;e=1;var n=r._;return t.add=function(e,r){return e+r},t.extend=function(e,r){return n({},e,r)},t}(),d=r._({},n.extend({a:1},{b:2}));exports.add=n.add,exports.extend=n.extend,exports.foo=d;
"
`;

exports[`Run config swc-helpers > file content dist/entry-mts.esm.es5.production.js 1`] = `
"import e,{_ as r}from\\"@swc/helpers/_/_object_spread\\";var n,t={},d=function(){if(n)return t;n=1;var r=e._;return t.add=function(e,r){return e+r},t.extend=function(e,n){return r({},e,n)},t}(),o=r({},d.extend({a:1},{b:2})),a=d.add,u=d.extend;export{a as add,u as extend,o as foo};
"
`;

exports[`Run config swc-helpers > file content dist/entry-mts.umd.es5.production.js 1`] = `
"var e,t;e=this,t=function(e,t){\\"use strict\\";var n,r={},d=function(){if(n)return r;n=1;var e=t._;return r.add=function(e,t){return e+t},r.extend=function(t,n){return e({},t,n)},r}(),o=t._({},d.extend({a:1},{b:2}));e.add=d.add,e.extend=d.extend,e.foo=o},\\"object\\"==typeof exports&&\\"undefined\\"!=typeof module?t(exports,require(\\"@swc/helpers/_/_object_spread\\")):\\"function\\"==typeof define&&define.amd?define([\\"exports\\",\\"@swc/helpers/_/_object_spread\\"],t):t((e=\\"undefined\\"!=typeof globalThis?globalThis:e||self)[\\"@ice/pkg-tests-mix-cjs-mjs\\"]={},e.require$$0);
"
`;

exports[`Run config swc-helpers > file content esm/cjs.js 1`] = `
"var _object_spread = require('@swc/helpers/_/_object_spread')._;
module.exports.add = function(a, b) {
    return a + b;
};
module.exports.extend = function(a, b) {
    return _object_spread({}, a, b);
};
"
`;

exports[`Run config swc-helpers > file content esm/entry-mts.d.ts 1`] = `
"import { add, extend } from './cjs';
export { add, extend };
export declare const foo: Record<string, any>;
"
`;

exports[`Run config swc-helpers > file content esm/entry-mts.js 1`] = `
"import { _ as _object_spread } from \\"@swc/helpers/_/_object_spread\\";
import { add, extend } from './cjs';
export { add, extend };
export var foo = _object_spread({}, extend({
    a: 1
}, {
    b: 2
}));
"
`;
